# bignum

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  coverage.yml
coverage/: CMakeLists.txt
include/: CMakeLists.txt  bignum.h
test/: CMakeLists.txt  RationalTest.cpp  SignedTest.cpp  StoreTest.cpp  UnsignedTest.cpp  uint128.h
