CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
SET(CMAKE_VERBOSE_MAKEFILE TRUE)
PROJECT(bignum)

OPTION(BUILD_UNIT_TESTS "Build unit tests" ON)
OPTION(BUILD_COVERAGE   "Code coverage"    OFF)

ADD_SUBDIRECTORY(include)

IF (BUILD_UNIT_TESTS)
    ENABLE_TESTING()
    ADD_SUBDIRECTORY(test)
ENDIF()

IF (BUILD_COVERAGE)
    ENABLE_TESTING()
    ADD_SUBDIRECTORY(coverage)
ENDIF()
